err/zipfelchappe.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zipfelchappe'...
Listing './lib/python3.5/site-packages/zipfelchappe/extensions'...
Listing './lib/python3.5/site-packages/zipfelchappe/locale'...
Listing './lib/python3.5/site-packages/zipfelchappe/locale/de'...
Listing './lib/python3.5/site-packages/zipfelchappe/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/zipfelchappe/paypal'...
Compiling './lib/python3.5/site-packages/zipfelchappe/paypal/app_settings.py'...
***   File "./lib/python3.5/site-packages/zipfelchappe/paypal/app_settings.py", line 32
    print PAYPAL
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zipfelchappe/paypal/management'...
Listing './lib/python3.5/site-packages/zipfelchappe/paypal/management/commands'...
Compiling './lib/python3.5/site-packages/zipfelchappe/paypal/management/commands/paypal_payments.py'...
***   File "./lib/python3.5/site-packages/zipfelchappe/paypal/management/commands/paypal_payments.py", line 11
    print "Total pledges processed: %d" % pledges_processed
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zipfelchappe/paypal/tasks.py'...
***   File "./lib/python3.5/site-packages/zipfelchappe/paypal/tasks.py", line 69
    print e.message
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zipfelchappe/paypal/views.py'...
***   File "./lib/python3.5/site-packages/zipfelchappe/paypal/views.py", line 44
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zipfelchappe/postfinance'...
Listing './lib/python3.5/site-packages/zipfelchappe/postfinance/management'...
Listing './lib/python3.5/site-packages/zipfelchappe/postfinance/management/commands'...
Compiling './lib/python3.5/site-packages/zipfelchappe/postfinance/management/commands/postfinance_payments.py'...
***   File "./lib/python3.5/site-packages/zipfelchappe/postfinance/management/commands/postfinance_payments.py", line 12
    print "Total payments processed: %d " % payments_processed
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zipfelchappe/postfinance/tasks.py'...
***   File "./lib/python3.5/site-packages/zipfelchappe/postfinance/tasks.py", line 67
    print e.message
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zipfelchappe/postfinance/views.py'...
***   File "./lib/python3.5/site-packages/zipfelchappe/postfinance/views.py", line 174
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zipfelchappe/static'...
Listing './lib/python3.5/site-packages/zipfelchappe/static/zipfelchappe'...
Listing './lib/python3.5/site-packages/zipfelchappe/static/zipfelchappe/css'...
Listing './lib/python3.5/site-packages/zipfelchappe/static/zipfelchappe/js'...
Listing './lib/python3.5/site-packages/zipfelchappe/static/zipfelchappe/lib'...
Listing './lib/python3.5/site-packages/zipfelchappe/templates'...
Listing './lib/python3.5/site-packages/zipfelchappe/templates/admin'...
Listing './lib/python3.5/site-packages/zipfelchappe/templates/admin/feincms'...
Listing './lib/python3.5/site-packages/zipfelchappe/templates/admin/feincms/zipfelchappe'...
Listing './lib/python3.5/site-packages/zipfelchappe/templates/admin/feincms/zipfelchappe/project'...
Listing './lib/python3.5/site-packages/zipfelchappe/templates/admin/feincms/zipfelchappe/projecttranslation'...
Listing './lib/python3.5/site-packages/zipfelchappe/templates/bootstrapform'...
Listing './lib/python3.5/site-packages/zipfelchappe/templates/zipfelchappe'...
Listing './lib/python3.5/site-packages/zipfelchappe/templates/zipfelchappe/emails'...
Listing './lib/python3.5/site-packages/zipfelchappe/templates/zipfelchappe/includes'...
Listing './lib/python3.5/site-packages/zipfelchappe/templatetags'...
Listing './lib/python3.5/site-packages/zipfelchappe/tests'...
Listing './lib/python3.5/site-packages/zipfelchappe/translations'...
Listing './lib/python3.5/site-packages/zipfelchappe-0.3.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
